compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/WrongFieldInitializer.kt
package test

import java.util.*

public open class WrongFieldInitializer {
    public var foo : String? = ""
}
